--- a/generators/app/templates/bower.json
+++ b/generators/app/templates/bower.json
@@ -17,19 +17,19 @@
     "wct.conf.json"
   ],
   "dependencies": {
-    "polymer": "1 - 2"
+    "polymer": "Polymer/polymer#1 - 2"
   },
   "devDependencies": {
-    "d2l-typography": "^6.0.0",
-    "iron-component-page": "^2.0.0",
-    "iron-demo-helpers": "^2.0.0",
-    "iron-test-helpers": "^2.0.0",
-    "web-component-tester": "^6.0.0"
+    "d2l-typography": "BrightspaceUI/typography#^6.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0"
   },
   "variants": {
     "1.x": {
       "dependencies": {
-        "polymer": "^1.11.0"
+        "polymer": "Polymer/polymer#^1.0.0"
       },
       "resolutions": {
         "webcomponentsjs": "^0.7"
